--- a/Blog42/Views/Shared/Error.cshtml
+++ b/Blog42/Views/Shared/Error.cshtml
@@ -1,10 +1,10 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Error";
+    ViewBag.Title = "Erro";
 }
 
 <hgroup class="title">
-    <h1 class="error">Error.</h1>
-    <h2 class="error">An error occurred while processing your request.</h2>
+    <h1 class="error">Erro.</h1>
+    <h2 class="error">Ocorreu um erro durante o processamento da sua requisição.</h2>
 </hgroup>
