--- a/Blog42/Views/User/ResetPassword.cshtml
+++ b/Blog42/Views/User/ResetPassword.cshtml
@@ -1,13 +1,20 @@
 ﻿@model Blog42.Models.UserResetPassword
 
 @{
-    ViewBag.Title = "Cadastrar Senha";
+    // Titulo, caso formulário "cadastrar senha", caso sucesso ao resetar "senha cadastrada"
+    ViewBag.Title = (@ViewBag.Success == null) ? "Cadastrar Senha" : "Senha Cadastrada";
 }
 
 <div class="jumbotron">
 
     <div class="box-title">
-        <h2 class="title">Olá, @User.Identity.Name. Vamos cadastrar sua nova senha?</h2>
+        <h2 class="title">
+            Olá, @User.Identity.Name! 
+            
+            @if (@ViewBag.Success == null) { // Exibe mensagem no formulário, não no sucesso 
+                <text>Vamos cadastrar sua nova senha?</text>
+            }
+        </h2>
     </div>
     <div class="content">
 
@@ -16,6 +23,19 @@
             @Html.AntiForgeryToken()
 
         <div id="box-login">
+           
+            @if (@ViewBag.Success != null) // Se obtive sucesso, exibe mensagem
+            {
+                <div class="div-success">
+                    <h2 class="msg-success">
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Senha cadastrada com sucesso!
+                    </h2>
+                    <br />
+                    @Html.ActionLink("Ir para o Painel Administrativo", "All", "Post")
+                </div>
+            }
+            else // Exibe formulário
+            {
             @Html.ValidationSummary(true)
             <div class="form-group">
                 @Html.LabelFor(m => m.Password)
@@ -36,6 +56,7 @@
                     <button type="button" class="btn btn-default btn-lg" onclick="location.href='@Url.Action("Logout","User")'">Sair e Cadastrar Depois</button>
                 </div>
             </div>
+            }
         </div>
     }
 
