--- a/Blog42/Views/User/ResetPassword.cshtml
+++ b/Blog42/Views/User/ResetPassword.cshtml
@@ -22,7 +22,7 @@
         {
             @Html.AntiForgeryToken()
 
-        <div id="box-login">
+        <div id="box-reset">
            
             @if (@ViewBag.Success != null) // Se obtive sucesso, exibe mensagem
             {
