--- a/Blog42/Views/User/Delete.cshtml
+++ b/Blog42/Views/User/Delete.cshtml
@@ -49,10 +49,10 @@
 
                     <div class="row buttons" id="box-default">
                         <div class="col-md-6">
-                            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span> Excluir este usuário.</button>
+                            <button type="submit" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-ok"></span> Excluir usuário</button>
                         </div>
                         <div class="col-md-6">
-                            <button type="button" onclick="location.href='@Url.Action("All","User")'" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span> Decidir depois.</button>
+                            <button type="button" onclick="location.href='@Url.Action("All","User")'" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-remove"></span> Decidir depois</button>
                         </div>
                     </div>
                 }
