--- a/Blog42/Views/User/All.cshtml
+++ b/Blog42/Views/User/All.cshtml
@@ -50,7 +50,7 @@
        
     </table>
     
-    <button type="button" class="btn btn-default" onclick="location.href = '@Url.Action("Edit", "User")'">
+    <button type="button" class="btn btn-default btn-lg" onclick="location.href = '@Url.Action("New", "User")'">
         <span class="glyphicon glyphicon-plus"></span> Criar Usuário
     </button>
     
