Revisão Controller/DAO/Model de Usuário

--- a/Blog42/Views/User/Edit.cshtml
+++ b/Blog42/Views/User/Edit.cshtml
@@ -42,7 +42,7 @@
                 else // Exibe formulário
                 {
                     @Html.ValidationSummary(true)
-                    @Html.HiddenFor(m => m.Id)
+                    @Html.HiddenFor(m => m.UserId)
                     <div class="row">
                         <div class="col-md-4">
                             @Html.LabelFor(m => m.Username)
